# IMCPP

./: CMakeLists.txt  README.md
conf/: ChatMsgService.conf  DepartService.conf  FriendService.conf  GroupService.conf  IM.sql  LoginService.conf  UserMsgService.conf
src/: CMakeLists.txt
src/ChatServer/: CMakeLists.txt  ChatService.cpp  ChatService.h  main.cpp
src/DepartServer/: CMakeLists.txt  DepartService.cpp  DepartService.h  main.cpp
src/FriendServer/: CMakeLists.txt  FriendService.cpp  FriendService.h  main.cpp
src/GroupServer/: CMakeLists.txt  GroupService.cpp  GroupService.h  main.cpp
src/LoginServer/: CMakeLists.txt  LoginServer.cpp  LoginService.cpp  LoginService.h  main.cpp
src/MsgServer/: MsgServer.cpp  MsgServer.h  main.cpp
src/OfflineMsgServer/: OfflineMsgService.cpp  OfflineMsgService.h
src/UserServer/: UserServer.cpp  UserServer.h  main.cpp
src/model/: admin.h  adminModel.cpp  departmodel.cpp  departmodel.h  friendmodel.cpp  group.h  groupmodel.cpp  groupmodel.h  msgmodel.cpp  msgmodel.h  offlinemsgmodel.cpp  offlinemsgmodel.h
src/mysqldb/: mysqldb.cpp
src/proto/: ChatMsg.pb.cc  ChatMsg.pb.h  ChatMsg.proto  Depart.pb.cc  Depart.pb.h  Depart.proto  Friend.pb.cc  Friend.pb.h  Friend.proto  Group.pb.cc  Group.pb.h  Group.proto  Login.pb.cc  Login.pb.h  Login.proto  UserMsg.pb.cc  UserMsg.pb.h  UserMsg.proto
src/redisdb/: redisdb.cpp  redisdb.h
src/redispb/: redispb.cpp  redispb.h
src/rpc/: mprpcchannel.cpp  rpcprovider.cpp
src/test/: CMakeLists.txt  test.cpp
